<!--
  ~ Copyright (c) 2013. CMG Ltd All rights reserved.
  ~
  ~ This software is the confidential and proprietary information of CMG
  ~ ("Confidential Information"). You shall not disclose such Confidential
  ~ Information and shall use it only in accordance with the terms of the
  ~ license agreement you entered into with CMG.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".FeedbackActivity">
    <EditText
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:ems="10"
        android:hint="@string/description"
        android:paddingBottom="10dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_information_feedback"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/feedback_privacy_link"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <Button
            android:id="@+id/btnSend"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/send"
            android:textSize="30sp"
            android:textColor="@android:color/white"
            android:background="@color/app_green"
            android:gravity="center_horizontal|center_vertical"/>
    </LinearLayout>

</LinearLayout>