<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:id="@+id/content_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:orientation="vertical"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/popup_corner_radius"
        app:cardBackgroundColor="@color/app_light_blue">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <ImageButton
                android:id="@+id/tv_dismiss"
                android:background="@null"
                android:src="@drawable/ic_close_dialog"
                android:scaleType="fitXY"
                android:tint="@color/app_purple"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_gravity="end"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:textSize="@dimen/show_case_text_size"
                android:textColor="@color/app_purple"
                android:text="@string/enter_licence_code"
                android:layout_marginBottom="10dp"/>
            <EditText
                android:id="@+id/txtCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/licence_code"/>
            <android.support.v7.widget.CardView
                android:id="@+id/btnActivateLicense"
                android:layout_margin="20dp"
                android:layout_gravity="center_horizontal"
                app:cardBackgroundColor="@color/app_purple"
                app:cardElevation="0dp"
                app:cardCornerRadius="6dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:clickable="true"
                android:foreground="@android:color/transparent"
                android:stateListAnimator="@anim/lift_up"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="activate"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white"
                    android:layout_gravity="center_horizontal|center_vertical"
                    />
            </android.support.v7.widget.CardView>
            <LinearLayout
                android:id="@+id/llSwitchLicense"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:textSize="@dimen/show_case_text_size"
                    android:textColor="@color/app_purple"
                    android:text="@string/switch_licence_code"
                    android:layout_marginBottom="10dp"/>
                <com.cmg.android.bbcaccent.view.spinner.MaterialSpinner
                    android:id="@+id/spinnerLicense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    app:ms_multiline="true"
                    app:ms_enableFloatingLabel="false"
                    app:ms_enableErrorLabel="false"
                    app:ms_baseColor="@color/app_purple"
                    app:ms_highlightColor="@color/app_light_blue"
                    app:ms_thickness="1dp"
                    app:ms_arrowColor="@color/app_purple"
                    app:ms_arrowSize="16dp"
                    app:ms_alignLabels="false"
                    />
                <android.support.v7.widget.CardView
                    android:id="@+id/btnSwitchLicense"
                    android:layout_margin="20dp"
                    android:layout_gravity="center_horizontal"
                    app:cardBackgroundColor="@color/app_purple"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="6dp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:clickable="true"
                    android:foreground="@android:color/transparent"
                    android:stateListAnimator="@anim/lift_up"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="switch"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"
                        android:layout_gravity="center_horizontal|center_vertical"
                        />
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>